basic functionality - done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>   
        
     <div id="newBook">
-        <form action="index.html" method="POST" name="addBook">
+        <form action="#" method="POST" name="addBook">
             <label> <h4>Podaj dane nowej książki:</h4>
                 <input type="text" size="100" name="title" placeholder="Tu wpisz tytuł książki" 
                        pattern=".{1,255}" required title="Minimalna liczba znaków to 1, maksymalna 255"/> <br/>
@@ -32,7 +32,7 @@
         </form>
     </div>
     
-    <h4>Lista książek. Kliknij na tytuł żeby rozwinąć szczegóły.</h4>
+    <h4>Pełna lista książek poniżej. Kliknij na tytuł żeby rozwinąć szczegóły.</h4>
     <div class="booksList">
        <!--empty div for generate books in js --> 
     </div>
