--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <title>The Bookstore</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
-	<script src="api/js/jquery-3.1.1.min.js"></script>
-        <script src="api/js/app.js"></script>	
+	<script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/app.js"></script>	
 </head>
 
 <body>
